--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,8 +36,8 @@
     <string name="pin_this_note">Pin this note</string>
     <string name="empty_notes_discarded">Empty notes discarded</string>
     <string name="empty_checklist_discarded">Empty checklist discarded</string>
-    <string name="welcome_banner_title">"Welcome to Your Notes! ✨ "</string>
-    <string name="welcome_banner_content">This is where you can quickly save notes after calls — whether it’s an address, a follow-up task, or something you don’t want to forget.</string>
+    <string name="welcome_banner_title">"Greetings from Your Notes! 🎉"</string>
+    <string name="welcome_banner_content">This is your spot for jotting down important details post-call, like addresses, to-do items, or any crucial information you need to remember. 📝</string>
     <string name="edited_just_now">Edited just now</string>
     <string name="edited_pattern">Edited %1$s</string>
     <string name="drag_current_item">Drag current item</string>
